--- a/FeedApp/templates/FeedApp/comments.html
+++ b/FeedApp/templates/FeedApp/comments.html
@@ -14,6 +14,7 @@
 
 <ul>
     <form method="POST">
+        {% csrf_token %}
         {% for c in comments %}
         <li>
             <p>{{ c.text }} -- {{ c.username }}</p>
