--- a/FeedApp/templates/FeedApp/base.html
+++ b/FeedApp/templates/FeedApp/base.html
@@ -32,10 +32,13 @@
                     <a class="nav-link" href="{% url 'FeedApp:profile' %}">My Profile</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="{% url 'FeedApp:friends' %}">Friend Requests</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="{% url 'FeedApp:myfeed' %}">My Feed</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'FeedApp:friendsfeed' %}">My Feed</a>
+                    <a class="nav-link" href="{% url 'FeedApp:friendsfeed' %}">Friends Feed</a>
                 </li>
             </ul>
 
