--- a/FeedApp/templates/FeedApp/base.html
+++ b/FeedApp/templates/FeedApp/base.html
@@ -49,7 +49,11 @@
                     <span class="navbar-text">Hello, {{ user.username }}.</span>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'users:logout' %}">Log out</a>
+                    <form method="post" action="{% url 'users:logout' %}" style="display: inline;">
+                        {% csrf_token %}
+                        <button type="submit" class="nav-link"
+                            style="background: none; border: none; cursor: pointer;">Log out</button>
+                    </form>
                 </li>
 
                 {% else %}
