--- a/users/templates/registration/logged_out.html
+++ b/users/templates/registration/logged_out.html
@@ -1,7 +1,8 @@
 {% extends "FeedApp/base.html" %}
 
 {% block content %}
-  
-    <p>You have been logged out. Thank you for visiting!</p>
+
+{# This simple template just confirms the user has been logged out. #}
+<p>You have been logged out. Thank you for visiting!</p>
 
 {% endblock content %}
