--- a/FeedApp/templates/FeedApp/friendsfeed.html
+++ b/FeedApp/templates/FeedApp/friendsfeed.html
@@ -10,11 +10,15 @@
 <form method="POST">
     {% csrf_token %}
     <table style="font-size: 25px; width: 100%;">
+        {# Iterate over the zipped_list passed from the view. #}
+        {# p=Post, c=Comment count, l=Like count #}
         {% for p, c, l in zipped_list %}
         <tr style="border: 1px solid black; padding: 6px;">
             <td>
                 {{p.username}}:&nbsp {{ p }}<br>
+                {# Check if the post has an image. If so, display it. #}
                 {% if p.image %}
+                {# Access the URL of the image file. #}
                 <img src="{{p.image.url}}" class="img-thumbnail" style="max-height: 300px;" alt="">
                 {% endif %}
             </td>
@@ -22,10 +26,12 @@
         <tr style="border: 1px solid black; padding: 6px;">
             <td>{{ p.date_posted }}</td>
             <td>
+                {# The button value is the post ID. This helps the view know which post was liked. #}
                 <button type="submit" name="like" value="{{p.id}}" style="background-color: transparent; border: none;">
                     Likes: &nbsp{{ l }} &nbsp&nbsp&nbsp
                 </button>
             </td>
+            {# Link to the comments page for this specific post. #}
             <td>Comments: &nbsp <a href="{% url 'FeedApp:comments' p.id %}">{{ c }}</a></td>
         </tr>
 
